--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,10 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/GestioVolsV4Enunciat
 endorsed.classpath=
 excludes=
-file.reference.xom-1.2.10.jar=../../Dropbox/Curs_2017_2018/M03/xom-1.2.10.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.xom-1.2.10.jar}
+    ${libs.Alb.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
